# projet_prog_C

./: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  categorie.txt  centre.txt  config.status  equipement.txt  gestion_entraineurs  interface.c  last_attempt  login.txt  main.c  projetc.glade  projetc.glade.bak  specialites.txt  trainer_login.txt  trainers.c  trainers.h  trainers.txt  type_cours.txt  villes.txt
autom4te.cache/: requests
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  centre.c  centre.h  cours.c  cours.h  entraineur.c  entraineur.h  equipement.c  equipement.h  evenement.c  evenement.h  glade  interface.c  interface.c.bak  interface.h.bak  main.c  membre.c  membre.h
src/.deps/: centre.Po  cours.Po  entraineur.Po  evenement.Po  membre.Po
